build(java): lower minimum version to 17