@@ -37,7 +37,7 @@ class SupportTicketTriageServiceTest {
                 "high",
                 "Enterprise customer cannot download invoices.",
                 "billing-operations"));
-        ChatRequest request = fakeClient.requests().getFirst();
+        ChatRequest request = fakeClient.requests().get(0);
         assertThat(request.responseFormat()).isEqualTo(TriageSchemas.SUPPORT_TICKET_TRIAGE);
         assertThat(request.temperature()).isEqualTo(0.1);
         assertThat(request.maxTokens()).isEqualTo(500);
